[gd_scene load_steps=5 format=3 uid="uid://c7t8x2dgbw0h3"]

[ext_resource type="Script" path="res://Scenes/UI/ConvoyVisualizer/convoy_visualizer.gd" id="1_p4xw2"]
[ext_resource type="PackedScene" uid="uid://c83k92d" path="res://Scenes/UI/ConvoyVisualizer/ProceduralTerrain.tscn" id="3_pt"]

[node name="ConvoyVisualizer" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p4xw2")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="World" type="Node2D" parent="SubViewportContainer/SubViewport"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="SubViewportContainer/SubViewport/World"]

[node name="SkyLayer" type="ParallaxLayer" parent="SubViewportContainer/SubViewport/World/ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(4000, 0)

[node name="SkyRect" type="ColorRect" parent="SubViewportContainer/SubViewport/World/ParallaxBackground/SkyLayer"]
offset_left = -2000.0
offset_top = -1000.0
offset_right = 2000.0
offset_bottom = 0.0
color = Color(0.392157, 0.584314, 0.929412, 1)

[node name="MidgroundLayer" type="ParallaxLayer" parent="SubViewportContainer/SubViewport/World/ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(4000, 0)

[node name="HillsRect" type="ColorRect" parent="SubViewportContainer/SubViewport/World/ParallaxBackground/MidgroundLayer"]
offset_left = -2000.0
offset_top = 0.0
offset_right = 2000.0
offset_bottom = 100.0
color = Color(0.24, 0.44, 0.28, 1)

[node name="ProceduralTerrain" parent="SubViewportContainer/SubViewport/World" instance=ExtResource("3_pt")]
position = Vector2(0, 150)

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer/SubViewport/World"]
position = Vector2(0, 0)

[node name="Vehicles" type="Node2D" parent="SubViewportContainer/SubViewport/World"]
position = Vector2(0, 100)

[node name="DebugUI" type="CanvasLayer" parent="."]
layer = 120

[node name="DebugPanel" type="PanelContainer" parent="DebugUI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 450.0
offset_bottom = 200.0

[node name="MarginContainer" type="MarginContainer" parent="DebugUI/DebugPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="DebugUI/DebugPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="DebugUI/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 1, 1)
text = "CONVOY DEBUG TOOLS"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DebugUI/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StateButton" type="Button" parent="DebugUI/DebugPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "State: STOPPED"

[node name="DirectionButton" type="Button" parent="DebugUI/DebugPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Direction: RIGHT"

[node name="ResetButton" type="Button" parent="DebugUI/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Convoy Position / Unstuck"

[node name="DifficultyLabel" type="RichTextLabel" parent="DebugUI/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[center]Terrain Difficulty: 1[/center]"
fit_content = true

[node name="DifficultySlider" type="HSlider" parent="DebugUI/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 9.0
step = 1.0
value = 1.0
